--- a/templates/config.html
+++ b/templates/config.html
@@ -20,6 +20,7 @@
 
 <form method="post" id="form">
   <input type="hidden" name="conf" id="config" value=""></input>
+	<input type="hidden" name="_csrf" value="{{.csrf_token}}" />
   <a class="btn" onclick="submit();">Update</a>
 </form>
 
